[package]
name = "simple_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.2.2"
diesel = { version = "1.0.0", features = ["postgres"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
maud = "0.23.0"
chrono = "0.4"